# rcmes-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  RCMES-MCP_Introduction.pptx  README.md  SECURITY.md  TESTING.md  agentic_ai_summit_2026_proposal.md  create_deck.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_feature.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: RCMES-MCP_Introduction.pptx  create_deck.py  example-prompts.md
rcmes_mcp_cache/kerchunk_refs/ACCESS-CM2_historical/reference.parquet/: .zmetadata
rcmes_mcp_cache/kerchunk_refs/ACCESS-CM2_ssp126/reference.parquet/: .zmetadata
rcmes_mcp_cache/kerchunk_refs/ACCESS-CM2_ssp245/reference.parquet/: .zmetadata
scripts/: init_mmgis.py
src/rcmes_mcp/: Data_Explorer.py  __init__.py  api.py  azure_client.py  demo_app.py  gemini_client.py  server.py  warmup.py
src/rcmes_mcp/middleware/: rate_limit.py  request_logging.py
src/rcmes_mcp/pages/: 1_Architecture.py
src/rcmes_mcp/prompts/: __init__.py  workflows.py
src/rcmes_mcp/resources/: __init__.py  datasets.py
src/rcmes_mcp/static/: index.html
src/rcmes_mcp/tools/: __init__.py  analysis.py  code_execution.py  data_access.py  indices.py  mmgis.py  processing.py  visualization.py
src/rcmes_mcp/utils/: __init__.py  cache.py  cloud.py  logging_config.py  mmgis_client.py  session.py  validation.py
tests/: __init__.py  conftest.py  test_cloud.py  test_mmgis.py  test_rate_limit.py  test_session.py  test_tools.py  test_validation.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/rcmes_mcp_cache/subsets/: f16e2c30ec297519_stats.json
web/src/: App.tsx  Architecture.tsx  api.ts  index.css
web/src/components/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  HowItWorks.tsx  ImageViewer.tsx  SettingsDrawer.tsx  ToolDAG.tsx  ToolNode.tsx
web/src/hooks/: useChat.ts  useDAG.ts
web/src/types/: events.ts
web/src/utils/: markdown.ts
(+1416 files in other folders)
