[project]
name = "rcmes-mcp"
version = "0.1.0"
description = "Regional Climate Model Evaluation System as an MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "NASA JPL", email = "support@nccs.nasa.gov" }
]
keywords = ["climate", "mcp", "rcmes", "cmip6", "climate-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "mcp>=1.0.0",
    "xarray>=2024.1.0",
    "dask[distributed]>=2024.1.0",
    "zarr>=2.16.0",
    "s3fs>=2024.1.0",
    "fsspec>=2024.1.0",
    "netCDF4>=1.6.0",
    "h5netcdf>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "xclim>=0.48.0",
    "cf-xarray>=0.8.0",
    "scipy>=1.11.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.7.0",
    "cartopy>=0.22.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
rcmes-mcp = "rcmes_mcp.server:main"
rcmes-gemini = "rcmes_mcp.gemini_client:main"

[project.urls]
Homepage = "https://rcmes.jpl.nasa.gov/"
Repository = "https://github.com/apache/climate"
Documentation = "https://climate.apache.org/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcmes_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
